src/test/ui/feature-gates/feature-gate-doc_cfg-cfg-rustdoc.stderr
error[E0658]: `cfg(rustdoc)` is experimental and subject to change (see issue #43781)
  --> $DIR/feature-gate-doc_cfg-cfg-rustdoc.rs:1:7
   |
LL | #[cfg(rustdoc)]
   |       ^^^^^^^
   |
   = help: add #![feature(doc_cfg)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
